--- a/index.html
+++ b/index.html
@@ -88,6 +88,78 @@
       color: var(--text-sub);
       font-size: clamp(0.92rem, 2.6vw, 1.05rem);
     }
+    .mascot {
+      display: flex;
+      align-items: center;
+      gap: clamp(16px, 4vw, 28px);
+      padding: clamp(16px, 3vw, 24px);
+      margin-bottom: clamp(18px, 3.4vw, 30px);
+      background: rgba(255, 255, 255, 0.88);
+      border-radius: var(--radius-md);
+      border: 1px solid var(--border);
+      box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.6);
+      position: relative;
+      overflow: hidden;
+    }
+    .mascot::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      pointer-events: none;
+      background: radial-gradient(circle at top right, rgba(91, 99, 255, 0.18), transparent 60%);
+    }
+    .mascot-figure {
+      position: relative;
+      display: grid;
+      place-items: center;
+      width: clamp(70px, 14vw, 90px);
+      height: clamp(70px, 14vw, 90px);
+      border-radius: 24px;
+      background: linear-gradient(135deg, #fff 0%, #f0f3ff 100%);
+      border: 1px solid rgba(91, 99, 255, 0.25);
+      box-shadow: 0 18px 24px rgba(59, 63, 204, 0.18);
+    }
+    .mascot-face {
+      font-size: clamp(1.4rem, 4.5vw, 1.8rem);
+      color: var(--accent);
+      transition: transform 0.3s ease;
+    }
+    .mascot-hand {
+      position: absolute;
+      bottom: clamp(10px, 2vw, 16px);
+      right: clamp(10px, 2vw, 16px);
+      width: clamp(24px, 4vw, 28px);
+      height: clamp(24px, 4vw, 28px);
+      border-radius: 50% 50% 45% 45%;
+      background: #ffd9ef;
+      box-shadow: inset -3px -5px 0 rgba(255, 176, 216, 0.6);
+      transform-origin: top right;
+    }
+    .mascot-message {
+      flex: 1;
+      margin: 0;
+      color: var(--text-sub);
+      font-size: clamp(0.95rem, 3vw, 1.05rem);
+      line-height: 1.6;
+    }
+    .mascot.is-animate .mascot-face {
+      animation: mascot-bounce 0.7s ease;
+    }
+    .mascot.is-animate .mascot-hand {
+      animation: mascot-wave 0.7s ease;
+    }
+    @keyframes mascot-bounce {
+      0% { transform: translateY(0) scale(1); }
+      30% { transform: translateY(-6px) scale(1.05); }
+      60% { transform: translateY(2px) scale(0.98); }
+      100% { transform: translateY(0) scale(1); }
+    }
+    @keyframes mascot-wave {
+      0% { transform: rotate(0deg); }
+      35% { transform: rotate(-18deg); }
+      70% { transform: rotate(12deg); }
+      100% { transform: rotate(0deg); }
+    }
     textarea {
       width: 100%;
       min-height: clamp(260px, 45vh, 480px);
@@ -244,6 +316,14 @@
       <p>美しい文章づくりをサポートする、ミニマルで軽快なカウンター。リアルタイムで文字数・行数・単語数をチェックできます。</p>
     </header>
 
+    <section class="mascot" aria-live="polite">
+      <div class="mascot-figure" aria-hidden="true">
+        <div class="mascot-face" id="mascot-face">(o´∀`o)</div>
+        <div class="mascot-hand"></div>
+      </div>
+      <p class="mascot-message" id="mascot-message">こんにちは！今日も楽しくカウントしましょう♪</p>
+    </section>
+
     <textarea id="t" placeholder="ここに文章を入力／貼り付け"></textarea>
 
     <div class="stats" aria-live="polite">
@@ -283,20 +363,60 @@
   <script>
     const $ = s => document.querySelector(s);
     const t = $('#t'), chars = $('#chars'), lines = $('#lines'), words = $('#words');
-    function update(){
+    const mascot = $('.mascot');
+    const mascotFace = $('#mascot-face');
+    const mascotMessage = $('#mascot-message');
+    const reactions = [
+      { face: '(o´∀`o)', message: 'いい感じ！そのペースで続けてね〜。' },
+      { face: '(๑•̀ㅂ•́)و✧', message: '勢いが出てきたよ！たくさん書いちゃおう♪' },
+      { face: '(〃ﾟ3ﾟ〃)', message: 'わぁ、素敵な言葉が並んでる…！' },
+      { face: '( ˘ω˘ )', message: '落ち着いて整えていこっか。' },
+      { face: '(*´꒳`*)', message: 'あとちょっとで完成の予感がするよ〜！' }
+    ];
+    let previousReactionIndex = -1;
+
+    function playReaction(text){
+      if (!mascot || !mascotFace || !mascotMessage) return;
+      if (!text.trim()) {
+        mascotFace.textContent = '(・∀・)ﾉ';
+        mascotMessage.textContent = '入力を待ってるよ〜！どんな文章が来るかな？';
+      } else {
+        let nextIndex = Math.floor(Math.random() * reactions.length);
+        if (reactions.length > 1) {
+          while (nextIndex === previousReactionIndex) {
+            nextIndex = Math.floor(Math.random() * reactions.length);
+          }
+        }
+        previousReactionIndex = nextIndex;
+        const reaction = reactions[nextIndex];
+        mascotFace.textContent = reaction.face;
+        mascotMessage.textContent = reaction.message;
+      }
+      mascot.classList.remove('is-animate');
+      void mascot.offsetWidth; // reflow to restart animation
+      mascot.classList.add('is-animate');
+    }
+
+    function update(triggerAnimation = false){
       const v = t.value;
       chars.textContent = [...v].length; // サロゲート対策
       lines.textContent = v === '' ? 0 : v.split(/\r\n|\r|\n/).length;
       const w = v.trim().split(/\s+/).filter(Boolean);
       words.textContent = v.trim() ? w.length : 0;
       localStorage.setItem('text', v); // 直近内容を保持
+      if (triggerAnimation) {
+        playReaction(v);
+      }
     }
-    t.addEventListener('input', update);
-    $('#clear').addEventListener('click', ()=>{ t.value=''; update(); });
+    t.addEventListener('input', ()=> update(true));
+    $('#clear').addEventListener('click', ()=>{ t.value=''; update(true); });
 
     // 前回の内容を復元
     t.value = localStorage.getItem('text') || '';
     update();
+    if (t.value) {
+      playReaction(t.value);
+    }
 
     // サービスワーカー登録（PWAのオフライン化）
     if ('serviceWorker' in navigator) {
